--- a/package.json
+++ b/package.json
@@ -59,7 +59,7 @@
   "dependencies": {
     "asn1.js": "0.4.1",
     "async": "~0.2.10",
-    "bignum": "^0.11.0",
+    "bignum": "*",
     "binary": "^0.3.0",
     "bindings": "=1.1.1",
     "bn.js": "=1.0.0",
